FSPA-555 style buttons

--- a/src/app/forms/stop-actions-form/stop-actions-form.component.html
+++ b/src/app/forms/stop-actions-form/stop-actions-form.component.html
@@ -7,4 +7,4 @@
     </div>
   </div>
 </template>
-<a (click)="addNewItem()">Add Action</a>
+<a class="add-new-item-button" (click)="addNewItem()">Add Action</a>
