FSPA-555 fix: crash on commodity create

--- a/src/app/forms/stop-action-dropoff-form/stop-action-dropoff-form.component.html
+++ b/src/app/forms/stop-action-dropoff-form/stop-action-dropoff-form.component.html
@@ -3,7 +3,7 @@
     [items]="stopActionTypes">
   </bd-form-switch>
   <drop-off-commodity-form
-    [formArray]="formGroup.controls.commodities"
+    [formArray]="commoditiesFormArray"
     [items]="stopAction.commodities"
     [availablePickups]="availableCommodities$ | async"
     (update)="onCommodityUpdate($event)"
