--- a/src/app/forms/stop-action-dropoff-form/stop-action-dropoff-form.component.html
+++ b/src/app/forms/stop-action-dropoff-form/stop-action-dropoff-form.component.html
@@ -2,18 +2,20 @@
   <bd-form-switch class="bd-form-control" [labelText]="'Action Type'" [enableButtonSwitch]="true" formControlName="type"
     [items]="stopActionTypes">
   </bd-form-switch>
-  <drop-off-commodity-form
-    [formArray]="commoditiesFormArray"
-    [items]="stopAction.commodities"
-    [availablePickups]="availableCommodities$ | async"
-    (update)="onCommodityUpdate($event)"
-    (remove)="onCommodityRemove($event)"
-    (select)="onCommoditySelect($event)"
-    [viewMode]="viewMode">
-  </drop-off-commodity-form>
-  <bd-textarea
-    class="bd-form-control"
-    formControlName="notes"
-    [labelText]="'Notes'">
-  </bd-textarea>
+  <div class="dropoff-border">
+    <drop-off-commodity-form
+      [formArray]="commoditiesFormArray"
+      [items]="stopAction.commodities"
+      [availablePickups]="availableCommodities$ | async"
+      (update)="onCommodityUpdate($event)"
+      (remove)="onCommodityRemove($event)"
+      (select)="onCommoditySelect($event)"
+      [viewMode]="viewMode">
+    </drop-off-commodity-form>
+    <bd-textarea
+      class="bd-form-control"
+      formControlName="notes"
+      [labelText]="'Notes'">
+    </bd-textarea>
+  </div>
 </form>
