--- a/src/app/forms/stop-action-pickup-form/stop-action-pickup-form.component.html
+++ b/src/app/forms/stop-action-pickup-form/stop-action-pickup-form.component.html
@@ -2,17 +2,19 @@
   <bd-form-switch class="bd-form-control" [labelText]="'Action Type'" [enableButtonSwitch]="true" formControlName="type"
     [items]="stopActionTypes">
   </bd-form-switch>
-  <pick-up-commodity-form
-    [formArray]="commoditiesFormArray"
-    (update)="onCommodityUpdate($event)"
-    (remove)="onCommodityRemove($event)"
-    (add)="onCommodityAdd($event)"
-    [items]="stopAction?.commodities"
-    [viewMode]="viewMode">
-  </pick-up-commodity-form>
-  <bd-textarea
-    class="bd-form-control"
-    formControlName="notes"
-    [labelText]="'Notes'">
-  </bd-textarea>
+  <div class="pickup-border">
+    <pick-up-commodity-form
+      [formArray]="commoditiesFormArray"
+      (update)="onCommodityUpdate($event)"
+      (remove)="onCommodityRemove($event)"
+      (add)="onCommodityAdd($event)"
+      [items]="stopAction?.commodities"
+      [viewMode]="viewMode">
+    </pick-up-commodity-form>
+    <bd-textarea
+      class="bd-form-control"
+      formControlName="notes"
+      [labelText]="'Notes'">
+    </bd-textarea>
+  </div>
 </form>
