--- a/src/app/loads/components/load-detail/load-detail.component.html
+++ b/src/app/loads/components/load-detail/load-detail.component.html
@@ -16,7 +16,7 @@
             <bd-button *ngIf="!selectedItem.customer" (click)="onCustomerEditClick()" color="white" [text]="'Add Customer'"></bd-button>
         </bd-view-detail-section>
         <navigation-anchor id="itinerary-view"></navigation-anchor>
-        <bd-view-detail-section [labelText]="'Itinerary'" [editButton]="false" [addContent]="'add itinerary'" (addClick)="onStopEdit()">
+        <bd-view-detail-section [labelText]="'Itinerary'" [editButton]="false" [addContent]="'add stop'" (addClick)="onStopEdit()">
           <div class="itenerary-navigation" *ngIf="selectedItem.stops && selectedItem.stops.length">
             <div class="left">
               <a [class.active]="stopMode == 'load'" (click)="onStopModeChange('load')">
