--- a/src/app/forms/stop-actions-form/stop-actions-form.component.html
+++ b/src/app/forms/stop-actions-form/stop-actions-form.component.html
@@ -1,6 +1,6 @@
-<template let-data ngFor [ngForOf]="renderFormData" let-i="index" [ngForTrackBy]="trackBy">
+<template let-data ngFor [ngForOf]="renderFormData" let-i="index" let-last="last" let-first="first" [ngForTrackBy]="trackBy">
   <div class='bd-form-list-item'>
-    <bd-remove-button class='bd-form-control' (onClick)='removeItem(data)' [prefixLabel]="label(i)"> </bd-remove-button>
+    <bd-remove-button class='bd-form-control' (onClick)='removeItem(data)' *ngIf="!first || (first && !last)" [prefixLabel]="label(i)"> </bd-remove-button>
     <div [ngSwitch]="data.item.type">
       <stop-action-pickup-form  *ngSwitchCase="stopActionTypes.PICKUP" [group]="data.group" (update)="updateItem($event)" [stopAction]="data.item" [load]="load" [stop]="stop" [viewMode]="viewMode"></stop-action-pickup-form>
       <stop-action-dropoff-form  *ngSwitchCase="stopActionTypes.DROPOFF" [group]="data.group" (update)="updateItem($event)" [stopAction]="data.item" [load]="load" [stop]="stop" [viewMode]="viewMode"></stop-action-dropoff-form>
