FSPA-555 fix buttom switch styles for disable

--- a/src/app/shared/components/bd-button-switch/bd-button-switch.component.scss
+++ b/src/app/shared/components/bd-button-switch/bd-button-switch.component.scss
@@ -53,16 +53,18 @@
       }
     }
   }
-}
 
-.bd-disabled {
+  &.bd-disabled {
 
-  .bd-buttons-container {
-    button {
-      color: $label-default-color;
+    .bd-buttons-container {
+      button {
+        color: $label-default-color;
+      }
     }
   }
 }
+
+
 
 @include interactive-text;
 
