--- a/src/app/forms/stop-action-pickup-form/stop-action-pickup-form.component.html
+++ b/src/app/forms/stop-action-pickup-form/stop-action-pickup-form.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="formGroup">
-  <bd-form-switch class="bd-form-control" [labelText]="'Action Type'" [enableButtonSwitch]="true" formControlName="type"
+  <bd-form-switch class="bd-form-control" [labelText]="'Action Type'" [enableButtonSwitch]="true" [formControl]="formGroup.controls.type"
     [items]="stopActionTypes">
   </bd-form-switch>
   <div class="pickup-border">
