--- a/src/app/forms/stop-action-dropoff-form/stop-action-dropoff-form.component.html
+++ b/src/app/forms/stop-action-dropoff-form/stop-action-dropoff-form.component.html
@@ -4,6 +4,7 @@
   </bd-form-switch>
   <div class="dropoff-border">
     <drop-off-commodity-form
+      [disabled]="disabled"
       [formArray]="commoditiesFormArray"
       [items]="stopAction.commodities"
       [availablePickups]="availableCommodities$ | async"
