--- a/src/app/forms/stop-action-pickup-form/stop-action-pickup-form.component.html
+++ b/src/app/forms/stop-action-pickup-form/stop-action-pickup-form.component.html
@@ -4,6 +4,7 @@
   </bd-form-switch>
   <div class="pickup-border">
     <pick-up-commodity-form
+      [disabled]="disabled"
       [formArray]="commoditiesFormArray"
       (update)="onCommodityUpdate($event)"
       (remove)="onCommodityRemove($event)"
