FSPA-555 hide commodities when deleted

--- a/src/app/loads/components/load-detail/components/stop-actions/stop-actions.component.html
+++ b/src/app/loads/components/load-detail/components/stop-actions/stop-actions.component.html
@@ -4,7 +4,7 @@
      [ngClass]="['commodities-container', getStopActionClass(stopAction)]">
       <commodities-header
         size='small'
-        *ngIf="stopActionIndex == 0"
+        *ngIf="stopActionIndex == 0 && hasCommodities(stopAction)"
         [titles]="commodityHeaders">
       </commodities-header>
       <commodity-details
