FSPA-555 temporary remove next buttons, make work top load panel

--- a/src/app/top-panel/top-panel.component.html
+++ b/src/app/top-panel/top-panel.component.html
@@ -5,7 +5,7 @@
   <input type="text" placeholder="Search for anything by number, name, date or amount. You can also type action you would like to perform...">
 </div>
 <div class="right">
-  <a [routerLink]="['/loads/0']">
+  <a [routerLink]="['/loads/0/edit-info']">
     <bd-button class="new-load" [color]="'primary'" [size]="'small'" [text]="'New Load'"></bd-button>
   </a>
 
