--- a/src/app/forms/load-company-form/load-company-form.component.html
+++ b/src/app/forms/load-company-form/load-company-form.component.html
@@ -64,13 +64,13 @@
         [text]="'Done'"
         (click)="onLoadSave()">
       </bd-button>
-      <bd-button
+      <!--<bd-button
         [disabled]="!isCustomerSelected"
         color="primary"
         class="bd-button button"
         [text]="'+ Stop >'"
         (click)="onAddStop()">
-      </bd-button>
+      </bd-button>-->
     </div>
   </form-sticky-bottom-container>
 </form>
