--- a/src/app/loads/components/load-edit/components/load-edit-stop/load-edit-stop.component.html
+++ b/src/app/loads/components/load-edit/components/load-edit-stop/load-edit-stop.component.html
@@ -21,8 +21,8 @@
         </bd-button>
         <bd-button [disabled]="isLoading$ | async" (click)="onFormSave()" color="primary" class="button" [text]="'Done'">
         </bd-button>
-        <bd-button [disabled]="isLoading$ | async" (click)="onStopAdd()" color="primary" class="button" [text]="'+ Stop >'">
-        </bd-button>
+        <!--<bd-button [disabled]="isLoading$ | async" (click)="onStopAdd()" color="primary" class="button" [text]="'+ Stop >'">
+        </bd-button>-->
       </div>
     </form-sticky-bottom-container>
   </bd-form-section>
