--- a/src/app/shared/components/bd-form-typeahead/bd-form-typeahead.component.html
+++ b/src/app/shared/components/bd-form-typeahead/bd-form-typeahead.component.html
@@ -7,8 +7,8 @@
   <template #loaderTemplate>
     <bd-spinner></bd-spinner>
   </template>
-  <bd-input [value]="query"
-      (valueChange)="changeQuery($event)"
+  <bd-input [ngModel]="query"
+      (ngModelChange)="changeQuery($event)"
       #input
       [disabled]="disabled"
       (focusChange)="onFocusChanged($event)"
