FSPA-589 fix: incorrect display text in view (without new line)

--- a/src/app/loads/components/load-detail/components/requirements-detail/requirements-detail.component.scss
+++ b/src/app/loads/components/load-detail/components/requirements-detail/requirements-detail.component.scss
@@ -32,6 +32,7 @@ $element-height: 35px;
 
     .special-requirements {
       padding: $default-margin;
+      white-space: pre-wrap;
       flex: 1;
     }
 
