--- a/src/app/companies/components/company-edit/components/company-edit-info/company-edit-info.component.html
+++ b/src/app/companies/components/company-edit/components/company-edit-info/company-edit-info.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="selectedItem">
-  <bd-form-spinner *ngIf="isLoading$ | async"></bd-form-spinner>
+  <bd-form-spinner *ngIf="isLoading"></bd-form-spinner>
 	<form-navigation
     sticky
     [stickyPositionInsideScroll]="true"
