FSPA-582 add system load numbe to new created load

--- a/src/app/loads/components/load-detail/load-detail.component.html
+++ b/src/app/loads/components/load-detail/load-detail.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="selectedItem">
-    <form-navigation sticky [stickyPositionInsideScroll]="true" [title]="'Load'" [anchors]="anchors">
+    <form-navigation sticky [stickyPositionInsideScroll]="true" [title]="title" [anchors]="anchors">
     </form-navigation>
     <form>
         <navigation-anchor id="load-view"></navigation-anchor>
