FSPA-596 #comment added notes to loads Itinerary view form

--- a/src/app/loads/components/load-detail/components/stop-actions/stop-actions.component.html
+++ b/src/app/loads/components/load-detail/components/stop-actions/stop-actions.component.html
@@ -12,6 +12,9 @@
         [commodity]="commodity"
         [index]="i">
       </commodity-details>
+      <div class="commodities-notes">
+        {{stopAction.notes}}
+      </div>
     </div>
   </template>
 </div>
