FSPA-530 fix fields

--- a/src/app/companies/components/company-edit/components/company-edit-contact/company-edit-contact.component.html
+++ b/src/app/companies/components/company-edit/components/company-edit-contact/company-edit-contact.component.html
@@ -4,7 +4,7 @@
     sticky
     [stickyPositionInsideScroll]="true"
     [disabled]="isLoading"
-    [title]="selectedItem.firstName"
+    [title]="actionName"
     [anchors]="anchors">
   </form-navigation>
   <bd-form-section [disabled]="disabled" [labelText]="'Contact'">
