--- a/src/app/companies/components/company-card/company-card.component.html
+++ b/src/app/companies/components/company-card/company-card.component.html
@@ -15,7 +15,7 @@ class="card-section"
     <div class="company-mc">MC# {{item.mc}}</div>
   </div>
   <div class="middle" *ngIf="item.contacts && item.contacts.length">
-    <span class="company-contact-full-name">{{item.contacts[0].firstName}} {{item.contacts[0].lastName}}</span>
+    <span class="company-contact-full-name">{{fullName}}</span>
     <span class="position ellipsis">{{item.contacts[0].position}}</span>
     <div class="company-address-phone ellipsis">{{phone}}</div>
   </div>
