FSPA-605 show popover in commodity view

--- a/src/app/loads/components/load-detail/components/commodity-details/commodity-details.component.html
+++ b/src/app/loads/components/load-detail/components/commodity-details/commodity-details.component.html
@@ -3,8 +3,21 @@
         <span>{{index}}</span>
     </div>
     <div
-        *ngFor="let column of columns" 
+        *ngFor="let column of columns; let ind = index" 
         class="commodity-detail-column">
-        <span>{{column}}</span>
+        <span
+            [attr.id]="'commodity-detail-' + index + ind"
+            [bd-popover]="detailsPopover"
+            [popoverDisabled]="isDisabled('commodity-detail-'+ index + ind)"
+            [popoverCloseOnMouseOutside]="true"
+            [popoverOnHover]="true">
+            <bd-popover-content
+                #detailsPopover
+                placement="auto"
+                [closeOnClickOutside]="true">
+                {{column}}
+            </bd-popover-content>
+            {{column}}
+        </span>
     </div>
 </div>
