--- a/src/app/forms/address-form/address-form.component.html
+++ b/src/app/forms/address-form/address-form.component.html
@@ -7,7 +7,7 @@
     </div>
 </template>
 <bd-typeahead
-	class="bd-form-control"
+	class="bd-form-control street-address-1"
 	formControlName="streetAddress1"
 	placeholder="Street Address"
   [source]="_placeSource"
@@ -21,21 +21,21 @@
 	<div class="section">
 		<div class="left-side">
 			<bd-input
-				class="bd-form-control left-control"
+				class="bd-form-control left-control street-address-2"
 				placeholder="Street Address 2"
 				formControlName="streetAddress2">
 			</bd-input>
-			<bd-input class="bd-form-control left-control" formControlName="city" placeholder="City" (valueChange)="onRemoveMap($event)">
+			<bd-input class="bd-form-control left-control city" formControlName="city" placeholder="City" (valueChange)="onRemoveMap($event)">
 			</bd-input>
 			<div class="section">
 				<bd-input
-					class="bd-form-control left-control half-side"
+					class="bd-form-control left-control half-side state"
 					placeholder="State"
 					formControlName="state"
 					(valueChange)="onRemoveMap($event)">
 				</bd-input>
 				<bd-input
-					class="bd-form-control middle-control half-side"
+					class="bd-form-control middle-control half-side zip"
 					placeholder="Zip"
 					(valueChange)="onRemoveMap($event)"
 					formControlName="zip">
