FSPA-609 fixed issue

--- a/src/app/equipment/components/equipment-detail/components/equipment-mileage/equipment-mileage.component.scss
+++ b/src/app/equipment/components/equipment-detail/components/equipment-mileage/equipment-mileage.component.scss
@@ -11,6 +11,14 @@
 
   .info-container {
     color: $black;
+
+    .value-container {
+      display: flex;
+
+      .value {
+        width: 82px;
+      }
+    }
   }
 
   .date-container {
