--- a/src/app/loads/components/load-detail/components/stop-actions/stop-actions.component.scss
+++ b/src/app/loads/components/load-detail/components/stop-actions/stop-actions.component.scss
@@ -27,6 +27,7 @@ $text-margin: 9px;
       background: $white;
       line-height: 35px;
       text-overflow: ellipsis;
+      white-space: nowrap;
     }
 
     &:last-of-type {
