--- a/src/app/forms/commodities-forms/drop-off-commodity-form/drop-off-commodity-form.component.html
+++ b/src/app/forms/commodities-forms/drop-off-commodity-form/drop-off-commodity-form.component.html
@@ -27,6 +27,7 @@
   <pickup-commodity
     class='pickup-commodity-item'
     [isRemoveButtonHidden]="'true'"
+    [hideNumber]="true"
     [viewMode]="viewMode"
     [disabled]="'true'"
     (click)="pickupSelect(item)"
