--- a/src/app/forms/commodities-forms/base-commodity-form/components/commodity/commodity.component.html
+++ b/src/app/forms/commodities-forms/base-commodity-form/components/commodity/commodity.component.html
@@ -1,4 +1,4 @@
-<div [class.hide-number]="hideNumber" [formGroup]="commodityForm">
+<div [formGroup]="commodityForm">
   <div class="c-row">
     <div class="c-cols">
       <input class="c-col"
