--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -112,6 +112,7 @@ $default-margin: 13px;
 $popover-margin: 15px;
 
 /* zIndexes */
+$bd-toast-manager-z-index: 120;
 $calendar-z-index: 110;
 $sticked-z-index: 100;
 $form-control-popup-z-index: 10;
