FSPA-639 #comment added unique classes for several elements on driver details window

--- a/src/app/drivers/components/driver-detail/components/driver-information/driver-information.component.html
+++ b/src/app/drivers/components/driver-detail/components/driver-information/driver-information.component.html
@@ -32,7 +32,7 @@
   <div class="right">
     <div class="address">
       <span class="icon-location"></span>
-        <span>{{streetAddress}}</span>
+        <span class="full-address">{{streetAddress}}</span>
     </div>
     <bd-contact-info [contactCollection]="driver.contactInfo"></bd-contact-info>
   </div>
