--- a/src/app/drivers/components/driver-detail/components/driver-payment-type/driver-payment-type.component.html
+++ b/src/app/drivers/components/driver-detail/components/driver-payment-type/driver-payment-type.component.html
@@ -1,4 +1,4 @@
 <div class="price interactive-background">
-  <span class="interactive-text">{{paymentTypeText}}:</span>
+  <span class="payment-type interactive-text">{{paymentTypeText}}:</span>
   <span class="rate interactive-text">{{driver.rate}} {{paymentOptionIcon}}</span>
 </div>
