--- a/src/app/shared/components/bd-buttons/bd-form-button/bd-form-button.component.scss
+++ b/src/app/shared/components/bd-buttons/bd-form-button/bd-form-button.component.scss
@@ -18,6 +18,10 @@
     color: $dark-grey;
     font-size: $tiny-font-size;
 
+    &.centered {
+      margin: $default-margin auto;
+    }
+
     &:hover {
       color: $blue;
     }
