--- a/src/app/equipment/components/equipment-detail/equipment-detail.component.html
+++ b/src/app/equipment/components/equipment-detail/equipment-detail.component.html
@@ -15,9 +15,13 @@
     <navigation-anchor id="equipment-detail-mileage"></navigation-anchor>
     <bd-view-detail-section [labelText]="'MILEAGE'" [addButton]="false" [editButton]="false">
       <equipment-mileage 
-        *ngFor="let record of selectedItem.mileages"
-        [mileage]="record">
+        [showAll]="showAll"
+        [mileages]="selectedItem.mileages">
       </equipment-mileage>
+      <bd-form-button *ngIf="!showAll" [buttonText]="'see all >'" buttonType="small centered" (click)="toggleView()">
+      </bd-form-button>
+      <bd-form-button *ngIf="showAll" [buttonText]="'< see less'" buttonType="small centered" (click)="toggleView()">
+      </bd-form-button>
     </bd-view-detail-section>
   </div>
 </div>
