--- a/src/app/equipment/components/equipment-detail/equipment-detail.component.html
+++ b/src/app/equipment/components/equipment-detail/equipment-detail.component.html
@@ -18,7 +18,7 @@
         [showAll]="showAll"
         [mileages]="selectedItem.mileages">
       </equipment-mileage>
-      <bd-form-button [buttonText]="showAll ? '< see less' : 'see all >'" buttonType="small centered" (click)="toggleView()">
+      <bd-form-button [buttonText]="buttonToggleText()" buttonType="small centered" (click)="toggleView()">
       </bd-form-button>
     </bd-view-detail-section>
   </div>
